Modified to use methods available in CLDC.